# AIDI

./: .env  .gitignore  AGENTS.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_backend.sh  run_send.sh
.github/workflows/: deploy.yml
app/: config.py
app/agents/: __init__.py  detection_agent.py  grounding_dino_agent.py  local_models.py  ocr_agent.py  quality_agent.py  segmentation_agent.py  single_agent.py  single_agent2.py  utils.py  vision_agent.py  vlm_agent.py
app/api/: gateway.py  health.py  metrics.py  schemas.py  task_store.py  task_store_sqlite.py
app/graphs/: dynamic_router.py  dynamic_vision_graph.py  hybrid_vision_graph.py  hybrid_vision_graph_hitl.py  hybrid_vision_graph_mcp.py  hybrid_vision_graph_memory.py  multi_agent_vision_graph.py  parallel_multi_agent_vision_graph.py  plan_schema.py  state.py  vision_graph.py
app/mcp_clients/: vision_mcp_client.py
app/mcp_servers/: vision_mcp_server.py
app/memory/: __init__.py  embedding_service.py  image_embedding_service.py  image_vector_memory.py  memory_manager.py  persistent_memory.py  session_memory.py  short_memory.py  vector_memory.py
app/observability/: langfuse_client.py  metrics.py  metrics_callback.py
app/services/: graph_runtime.py  graph_runtime_persistent.py
app/skills/: base.py  md_skill_adapter.py  registry.py  skill_loader.py
app/skills/builtin/: vision_composer.py
app/tools/: cv_api.py  cv_tools.py  langchain_vision_tools.py  native_vision_tools.py  tool_registry.py  utils.py  vlm_api.py  vlm_tools.py
dockers/: Dockerfile.cv_server  Dockerfile.gateway
k8s/: README.md  blue.yaml  configmap.yaml  cvserver.yaml  gateway.yaml  green.yaml  hpa.yaml  namespace.yaml  postgres.yaml  prometheus.yaml  secret.yaml  service.yaml
k8s_study/: nginx-deployment.yaml  nginx-service.yaml
scripts/: download_hf_model.py  test_image_vector_memory.py  test_vector_memory.py
server/: Installation.md  cv_server.py  grounding_server.py  requirements_cv.txt  requirements_gdino.txt  run.sh  run_cv.sh  run_gdion.sh  test.sh  utils.py
tests/: test_check_skill_tool.py  test_config.py  test_dynamic_router.py  test_md_skills.py  test_performance_comparison.py  test_query_with_skill.py  test_runtime_persistence.py  test_skills.py  test_tool_registry.py
tests/evaluation/: test_evaluate.py
utils/: logger.py  utils.py
vllm_deploy/: run_qwen25_VL_7B.sh  run_qwen3_30B.sh
(+1 files in other folders)
