[project]
name = "aidi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "langchain>=1.3.4",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.2.2",
    "langfuse>=4.7.1",
    "langgraph>=1.2.4",
    "mcp>=1.27.2",
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sentence-transformers>=5.5.1",
    "ultralytics>=8.4.61",
    "uvicorn>=0.49.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
