[project]
name = "aidi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "langchain>=1.3.4",
    "langchain-community>=0.4.2",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.2.2",
    "langfuse>=4.7.1",
    "langgraph>=1.2.4",
    "langgraph-checkpoint-postgres>=3.1.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "loguru>=0.7.3",
    "mcp>=1.27.2",
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.12",
    "psycopg[binary,pool]>=3.3.4",
    "pymysql>=1.2.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "python-dotenv>=1.2.2",
    "python-frontmatter>=1.3.0",
    "requests>=2.34.2",
    "sentence-transformers>=5.5.1",
    "sqlalchemy>=2.0.51",
    "ultralytics>=8.4.61",
    "uvicorn>=0.49.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
